<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical"

    tools:context=".MainActivityLib">

    <TextView
        android:id="@+id/tv_home_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Home Page "
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.076" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="331dp"
        android:layout_height="217dp"
        android:contentDescription="@android:string/copyUrl"
        app:srcCompat="@drawable/bookshelf"
        tools:ignore="NewApi" />

    <Button
        android:id="@+id/libID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="MyLibrary"
        android:background="@drawable/mainlibbackground"
        android:text="@string/ma_bibliothèque"
        android:textColor="#FFF5F2"
        android:textSize="22sp"
        />

    <Button
        android:id="@+id/historiqueID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="BestBooks"
        android:text="@string/meilleurs_livres"
        android:background="@drawable/mainlibbackground"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="47dp"
        android:textColor="#FFF5F2"
        android:textSize="22sp"/>

    <Button
        android:id="@+id/aventureID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="aventureOnClickAction"
        android:text="@string/notification"
        tools:ignore="MissingConstraints,OnClick"
        tools:layout_editor_absoluteX="5dp"
        tools:layout_editor_absoluteY="84dp"
        android:background="@drawable/mainlibbackground"
        android:textColor="#FFF5F2"
        android:textSize="22sp"/>

    <Button
        android:id="@+id/mapID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="mapOnClick"
        android:text="@string/localisation"
        tools:ignore="MissingConstraints"
        android:background="@drawable/mainlibbackground"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="180dp"
        android:textColor="#FFF5F2"
        android:textSize="22sp"/>

    <Button
        android:id="@+id/dialogID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/mainlibbackground"
        android:onClick="dialogAction"
        android:text="@string/date_of_booking"
        android:textColor="#FFF5F2"
        android:textSize="22sp"/>

    <Button
        android:id="@+id/nextID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/mainlibbackground"
        android:onClick="AnimOnClick"
        android:text="@string/guide_utilisation"
        android:textColor="#FFF5F2"
        android:textSize="22sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="2dp"
        tools:layout_editor_absoluteY="132dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:text="TextView" />

</LinearLayout>